Less white space on ideas list fixes #588

--- a/static-src/scss/core/_container.scss
+++ b/static-src/scss/core/_container.scss
@@ -59,6 +59,10 @@ body.m-shadow {
         margin-right: 0;
         min-height: 1px;
     }
+
+    @media screen and (max-width: $mobile-breakpoint) {
+        padding: 0;
+    }
 }
 
 .popup-page {
